[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pybehance"
authors = [{name = "Semenov Artur", email = "juicehq@yandex.ru"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["beautifulsoup4==4.11.1", "httpx==0.23.1"]

[project.urls]
Home = "https://github.com/meanother/behance-py"
